0.8.87
  Czech localizations by golyalpha!
  Work around for another change that made mirrors stackable
  Added recycling recipes:
    LMPs can be slag-furnaced'd
    Instructions can be smelted into blank instruction plates
    Logic Matrix <Whatevers> can be smelted into blank logic matrices
    

0.8.86
  Better coremod
  Remove conflicting lacerator recipes
  Blocks with buffered output can be punched to unclog. This can be helpful for recovering your items if you've fallen into your industrial sugar cane farm.
  Jammed some netspam
  Unplugged a render bug

0.8.85
  Coremods are even better than localizations.

0.8.84
  Localizations are useful.
  Fixed probe

0.8.83
  Ran over a bunch of giant render bugs with a truck.

0.8.81
  1.7.10 port
  Prevent notices sent to fake players, which was causing networking error spam
  Added the /point command. Point at things!

0.8.80
  Return the silver ore slag recipe to existence

0.8.79
  Servos & servo rails can now be colored; a colored servo will ignore differently colored servo rails.
  The pressurizer now has 3 slots on servos, and defaults to sucking
  /f saycoords now supports notes; eg "/f saycoords there's a big cave here!"
  Since I'm tired of discovering I've been playing in peaceful for the past 2 hours and/or losing named mobs, I've added a button to the world select screen that warns you if you're about to load up a world with peaceful difficulty.
  Crystallizer state syncs & renders better
  FINALLY FIXED THE SERVO GLITCHY TURNY THING \(╥﹏╥)/
  Hopefully maybe possibly fixed ore processing recipe problems
  Switched to Forge's FakePlayer

0.8.77
  Fixed some NPEs.

0.8.69
  Unbroke the Embarkener

0.8.68
  Ported to 1.7
  Servos Logic has been rearchitected. There are now only 2 stacks.
    So, removed some instructions and added some new ones
  Removed a ton of lame things, including:
    Router
    Bag of Holding
  You'll find an FZ Manual shortly after acquiring iron.