@@ -5,6 +5,7 @@
     LMPs can be slag-furnaced'd
     Instructions can be smelted into blank instruction plates
     Logic Matrix <Whatevers> can be smelted into blank logic matrices
+  Lacerators speed up much quicker
     
 
 0.8.86
